Add inline style

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         </div>
       </div>
 
-      <div class="drop">
+      <div class="drop" style="height: fit-content">
         <p id="header">Menu Item &nbsp; &#8595;</p>
         <div class="dropContent">
           <div class="dropDown" id="rt">
